# crypto-trading-framework

./: .env.example  .gitignore  CONFIG.md  LICENSE  PORTAL_INTEGRATION_PLAN.md  PORTAL_MONITOR_DETAIL_AND_LOGS.md  PORTAL_MONITOR_RECENT_ORDERS.md  PORTAL_MONITOR_STRATEGY_LIST.md  README.en.md  README.md  docker-compose.yml  requirements.txt
advise/: claude_code_insights.md
cpp/: CMakeLists.txt  STRUCTURE.md  risk_config.json
cpp/adapters/binance/: BINANCE_README.md  binance_rest_api.cpp  binance_rest_api.h  binance_websocket.cpp  binance_websocket.h
cpp/adapters/okx/: README.md  okx_rest_api.cpp  okx_rest_api.h  okx_websocket.cpp  okx_websocket.h
cpp/core/: config_center.h  data.h  event.h  event_engine.h  logger.cpp  logger.h
cpp/network/: auth_manager.h  frontend_handler.h  proxy_config.h  secure_frontend_handler.h  vpn_network_monitor.h  websocket_server.cpp  websocket_server.h  ws_client.cpp  ws_client.h  zmq_server.cpp  zmq_server.h
cpp/scripts/: STATS_STACK.md  auto_kline_monitor_v2.py  boundary_probe.py  check_klines_stats.sh  equity_backfill.py  equity_recorder.py  export_trade_statements.py  fast_kline_filler.py  fetch_binance_min_qty.py  fetch_okx_min_coin_qty.py  fix_duplicate_klines.sh  monitor_btc_klines.sh  pit100_data_recorder.py  pit100_metrics_backfill.py  preload_1d_klines.py  preload_funding_rate.py  preload_klines_to_redis.py  reaggregate_klines.py  rebalance_trace.py  refill_from_vision.py  run_gap_filler_loop.sh  start_all.sh  stats_api.py  stats_api_watchdog.sh  stop_all.sh  test_redis_8h_klines.py
cpp/server/: trading_server_main.cpp
cpp/server/callbacks/: websocket_callbacks.cpp  websocket_callbacks.h
cpp/server/config/: server_config.cpp  server_config.h
cpp/server/handlers/: frontend_command_handler.cpp  frontend_command_handler.h  order_processor.cpp  order_processor.h  query_handler.cpp  query_handler.h  subscription_manager.cpp  subscription_manager.h
cpp/server/klinedata/: data_recorder.cpp  gap_detector.cpp  gap_detector.h  historical_data_fetcher.cpp  historical_data_fetcher.h  kline_fast_filler.cpp  kline_gap_filler.cpp  kline_utils.cpp  kline_utils.h
cpp/server/managers/: account_manager.cpp  account_manager.h  account_monitor.h  redis_data_provider.cpp  redis_data_provider.h  redis_recorder.cpp  redis_recorder.h  strategy_process_manager.h  symbol_delist_monitor.h
cpp/strategies/acount_configs/: binance_account.example.json
cpp/strategies/configs/: initial_capital.example.json  strategy.example.json
cpp/strategies/core/: account_module.h  market_data_module.h  py_strategy_base.h  py_strategy_bindings.cpp  trading_module.h
cpp/strategies/implementations/: example_strategy.py
cpp/strategies/implementations/grid/: grid_strategy_cpp.py
cpp/strategies/strategy_configs/: account_strategy_binding.example.json
cpp/strategies/utils/: binance_min_qty_sync.py  kline_manager.py  redis_data_fetcher.py  strategy_logger.py  view_strategy_logs.sh
cpp/totalconfig/: email_alert_network.example.json  network_monitor_config.example.json
cpp/trading/: account_registry.h  config_loader.h  order.h  risk_manager.h  strategy_config_loader.h
cpp/trading/alerts/: __init__.py  email_alert.py  email_config.example.json  lark_alert.py  lark_config.example.json
cpp/user_configs/: user.example.json
improve/: 01_security_checklist.md  02_performance_cpp.md  03_performance_python.md  04_deployment_guide.md
operator-console/: .env.example  STRUCTURE.md  package-lock.json
operator-console/database/: clickhouse_schema.sql
operator-console/deploy/: deploy.sh
operator-console/src/: App.vue
operator-console/src/api/: order.js
operator-console/src/router/: index.js
operator-console/src/stores/: account.js  app.js  log.js  order.js  stats.js  strategy.js  user.js
yunwei/: REDIS_数据恢复操作指南.md  前端数据为空_stats_api排障.md
实盘框架前端页面/: .env.example  ACCOUNT_INTEGRATION.md  README.md  package.json  start-wsl.sh  vite.config.js
实盘框架前端页面/deploy/: nginx.conf  setup-ssl.sh
实盘框架前端页面/src/: main.js
实盘框架前端页面/web_server/: README.md
(+49 files in other folders)
